<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/server_info">

        <EditTextPreference
            android:key="server_ip"
            android:title="@string/server_ip"
            android:summary="@string/server_summary"
            android:defaultValue="http://10.0.2.2:3000/"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/edit_name">

        <EditTextPreference
            android:key="name_preference"
            android:title="@string/edit_name"
            android:summary="@string/name_summary"
            android:defaultValue="@string/default_name"
            android:dialogTitle="@string/edit_name" />

    </PreferenceCategory>
</PreferenceScreen>         